--- a/events.html
+++ b/events.html
@@ -253,7 +253,8 @@
                                 <div class="item5">
                                     <img class="item-img" src="images/cultural/encan.jpg">
                                     <div class="item9"></div>
-                                    <div class="item10"><i class="fa fa-clock-o"></i></div>
+                                    <div class="item10"> 14<br><span style="font-size: 0.6em;">Mar</span>
+                                        <!--<i class="fa fa-clock-o"></i>--></div>
                                 </div>
 
                                 <div class="item6 "></div>
@@ -453,55 +454,9 @@
 
                 </div>
                 <div class="row">
+
                     <div class="col-md-6 col-sm-12 col-lg-4 my-5  px-0">
                         <div id="dialog-7" class="opener event-card-holder">
-                            <div class="event-card ">
-                                <div class="item1 "></div>
-                                <div class="item2 "></div>
-                                <div class="item3 "></div>
-                                <div class="item4 "></div>
-                                <div class="item5">
-                                    <img class="item-img" src="images/cultural/step_up.jpg">
-                                    <div class="item9"></div>
-                                    <div class="item10"><i class="fa fa-clock-o"></i></div>
-                                </div>
-
-                                <div class="item6 "></div>
-                                <div class="item7 "></div>
-                                <div class="item8 "></div>
-                            </div>
-                            <div class="event-card-title" data-wow-delay="0.5s">
-                                Clash of Titans
-                            </div>
-                            <div id="dialog-7-c" class="dlg">
-                                <br>
-                                <div class="ui-widget-content title sticky-top">Clash of Titans</div>
-                                <br>
-                                <div class="ui-widget-content content">
-                                    <p></p>
-                                    <p class=" para-dlg-1"><i>“The job of feets is walking, but their hobby is dancing.”</i> A signature event of Technovation, “Clash of Titans” is a group dance competition, featuring the most talented crews across the nation. Your team, your
-                                        beats, your grooves, our arena. Are you up for the challenge?.</p>
-
-                                    <p class=" para-dlg-3">Rules:</p>
-                                    <ul class=" para-dlg-4">
-                                        <li>Each team consist of a minimum of 8 and a maximum of 20 members.</li>
-                                        <li>Music of the final round must be submitted well in advance to the co-ordinators.</li>
-                                        <li>On-stage at a time : 15 members.</li>
-                                        <li>Any pre-recorded or live music can be used for the performance</li>
-                                        <li>The performance should not exceed 8 minutes.</li>
-                                        <li>Any kind of props are allowed .</li>
-                                        <li>Usage of fire/water/smoke in any form is not allowed.</li>
-                                        <li>Any kind of misbehaviour would result in direct disqualification.</li>
-                                        <li>The decision taken by the organisers is final and binding for the performers.</li>
-                                    </ul>
-
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                    <div class="col-md-6 col-sm-12 col-lg-4 my-5  px-0">
-                        <div id="dialog-8" class="opener event-card-holder">
                             <div class="event-card ">
                                 <div class="item1 "></div>
                                 <div class="item2 "></div>
@@ -520,7 +475,7 @@
                             <div class="event-card-title" data-wow-delay="0.5s">
                                 Flashmob
                             </div>
-                            <div id="dialog-8-c" class="dlg">
+                            <div id="dialog-7-c" class="dlg">
                                 <br>
                                 <div class="ui-widget-content title sticky-top">Flashmob </div>
                                 <br>
@@ -535,7 +490,7 @@
 
                     </div>
                     <div class="col-md-6 col-sm-12 col-lg-4 my-5  px-0">
-                        <div id="dialog-9" class="opener event-card-holder">
+                        <div id="dialog-8" class="opener event-card-holder">
                             <div class="event-card ">
                                 <div class="item1 "></div>
                                 <div class="item2 "></div>
@@ -554,7 +509,7 @@
                             <div class="event-card-title" data-wow-delay="0.5s">
                                 Fire and Ice
                             </div>
-                            <div id="dialog-9-c" class="dlg">
+                            <div id="dialog-8-c" class="dlg">
                                 <br>
                                 <div class="ui-widget-content title sticky-top">Fire and Ice </div>
                                 <br>
@@ -822,8 +777,43 @@
 
                 </div>
                 <div class="row">
+
                     <div class="col-md-6 col-sm-12 col-lg-4 my-5  px-0">
                         <div id="dialog-f7" class="opener event-card-holder">
+                            <div class="event-card ">
+                                <div class="item1 "></div>
+                                <div class="item2 "></div>
+                                <div class="item3 "></div>
+                                <div class="item4 "></div>
+                                <div class="item5">
+                                    <img class="item-img" src="images/fun/stunt_show.jpg">
+                                    <div class="item9"></div>
+                                    <div class="item10"><i class="fa fa-clock-o"></i></div>
+                                </div>
+
+                                <div class="item6 "></div>
+                                <div class="item7 "></div>
+                                <div class="item8 "></div>
+                            </div>
+                            <div class="event-card-title" data-wow-delay="0.5s">
+                                The Stunt Show
+                            </div>
+                            <div id="dialog-f7-c" class="dlg">
+                                <div class="ui-widget-content title">The Stunt Show</div>
+                                <div class="ui-widget-content content">
+                                    <p></p>
+                                    <p class=" para-dlg-2"> Stay off the tracks! Team RTZ is all set to awe you in disbelief with the roar and thunder of their bikes.</p>
+                                    <p class=" para-dlg-2">Get Ready to experience an enthralling evening very soon!</p>
+
+                                    <p class=" para-dlg-2"><i><br>#Technovation2020<br>#KeepTheVibeAlive</i></p>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-12 col-lg-4 my-5  px-0">
+                        <div id="dialog-f8" class="opener event-card-holder">
                             <div class="event-card ">
                                 <div class="item1 "></div>
                                 <div class="item2 "></div>
@@ -842,7 +832,7 @@
                             <div class="event-card-title" data-wow-delay="0.5s">
                                 E-gaming
                             </div>
-                            <div id="dialog-f7-c" class="dlg">
+                            <div id="dialog-f8-c" class="dlg">
                                 <div class="ui-widget-content title">E-gaming</div>
                                 <div class="ui-widget-content content">
                                     <p></p>
