--- a/events.html
+++ b/events.html
@@ -841,9 +841,15 @@
                                         <li>PUBG</li>
                                         <li>FIFA</li>
                                         <li>Mobile Legends</li>
+                                        <li>Call Of Duty Mobile</li>
+                                        <li>NFS</li>
+                                        <li>Tekken</li>
                                         <li>CS Go</li>
-                                        <li>COD</li>
                                     </ol>
+                                    <p class=" para-dlg-3">Judgement:</p>
+                                    <ul class=" para-dlg-4">
+                                        <li>There will be only one winner team per game.</li>
+                                    </ul>
                                 </div>
 
                             </div>
