event date and time animation added

--- a/events.html
+++ b/events.html
@@ -788,9 +788,11 @@
                                 <div class="item5">
                                     <img class="item-img" src="images/fun/stunt_show.jpg">
                                     <div class="item9"></div>
-                                    <div class="item10"><i class="fa fa-clock-o"></i></div>
+                                    <div class="item10">
+                                        <div class="headtext" id="text1">15<br><span style="font-size: 0.6em;">Mar</span></div>
+                                        <div class="headtext" id="text2">4<br><span style="font-size: 0.6em;">PM</span></div>
+                                        <!--<i class="fa fa-clock-o"></i>--></div>
                                 </div>
-
                                 <div class="item6 "></div>
                                 <div class="item7 "></div>
                                 <div class="item8 "></div>
