--- a/events.html
+++ b/events.html
@@ -386,7 +386,7 @@
                                 <div class="item3 "></div>
                                 <div class="item4 "></div>
                                 <div class="item5">
-                                    <img class="item-img" src="images/cultural/spectacolo.png">
+                                    <img class="item-img" src="images/cultural/spectacolo.jpg">
                                     <div class="item9"></div>
                                     <div class="item10"><i class="fa fa-clock-o"></i></div>
                                 </div>
